--- a/workspace/test-002/conf/partitionConf.yaml
+++ b/workspace/test-002/conf/partitionConf.yaml
@@ -1,3 +1,3 @@
 --- # Used when producing input stores with GbintToIndexedStore driver.
 scaleMode: NUMBER_PARTITIONS                          # {NUMBER_PARTITIONS, RECORDS_PER_PARTITION}
-scale: 1000                                           # Value corresponding to 'scaleMode'.
+scale: 10_000                                         # Value corresponding to 'scaleMode'.
